refactor: copy old endpoints to new
